Issue #25555: Fix parser and AST: fill lineno and col_offset of "arg" node when compiling AST from Python objects.